--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/real-estate2.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lama Real Estate App</title>
     <meta name="description" content="Buy, Sell and Rent Properties" />
